--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,4 +1,14 @@
 ---
-
-# SSH Configuration
+ansible_user: <sshuser>  # User use to run the playbook on the remote host
+# SSH Configurations
 ssh_port: 2224  # Port personnalisé pour SSH
+mail_user: <email>
+mail_password: "<google_app_password>" # use google app password
+mail_smtp_server: smtp.gmail.com # for gmail mail 
+mail_port: 587
+mail_syslog: "LOG_MAIL" # Syslog facility 
+
+# Telegram bot configuration
+telegram_bot_token: "<token>" # Telegram bot token
+chat_id: "<chat_id>" # Telegram chat id
+
