--- a/inventory.yml
+++ b/inventory.yml
@@ -1,5 +1,6 @@
 raspberrypi:
   hosts:
-    <raspberrypi_ip>:
+    piserver1.local:
+      ansible_port: 2224
       ansible_ssh_private_key_file: ~/.ssh/id_rsa
-      ansible_user: <user>  # raspberrypi user
+      ansible_user: <user> # raspberrypi user
